# uncho

./: .env.example  .gitignore  README.md  eda.ipynb  pyproject.toml
backend/: __init__.py  deps.py  main.py  models.py
backend/routers/: chat.py  crisis.py  dossier.py  export.py  geo.py  health.py  narrative.py  rankings.py  simulate.py  timeline.py
data/: eda.ipynb
etl/: __init__.py
etl/databricks/: __init__.py  client.py  config.py  pipeline.py  schemas.py
etl/databricks/bronze/: __init__.py  downloader.py  ingest_cbpf.py  ingest_fts.py  ingest_hno.py  ingest_hrp.py  ingest_inform.py  ingest_reliefweb.py
frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  react-simple-maps.d.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  types.ts  utils.ts
kumo/: __init__.py  graph_config.py  integration.py
kumo/tasks/: cascading_risk.py  donor_behavior.py  gap_projection.py  velocity_prediction.py
mcp/: server.py
mcp/prompts/: dossier_template.md  guardrails.md  system_prompt.md
mcp/tools/: check_data_health.py  generate_dossier.py  optimize_allocation.py  query_kumo_predictions.py  query_rankings.py  simulate_impact.py
overview/: ARCHITECTURE.md  DATASETS.md  FEATURES_OVERVIEW.md  UN_WORKFLOW.md  eda2.md  eda_overview.md  implementation_plan.md  kumo.md  project_overview.md  task overview.md
side-challanges/: claude.md
web/: package-lock.json  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
(+36 files in other folders)
