[project]
name = "lighthouse-os"
version = "0.1.0"
description = "Intelligent Humanitarian Gap Analysis Platform — UN Decision Support System"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }

dependencies = [
    # === Core Data Processing ===
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "duckdb>=0.10.0",
    # === Databricks ===
    "databricks-sdk>=0.20.0",
    "databricks-sql-connector>=3.1.0",
    "databricks-connect>=14.3.0",
    "delta-spark>=3.1.0",
    "pyspark>=3.5.0",
    # === AI / LLM ===
    "anthropic>=0.40.0",
    "mcp>=1.0.0",
    # === Data Sources ===
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "openpyxl>=3.1.0",
    # === Utilities ===
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "loguru>=0.7.0",
    # === Testing ===
    "fastapi>=0.136.0",
    "uvicorn>=0.44.0",
    "sse-starlette>=3.3.4",
    "tenacity>=9.1.4",
    "cachetools>=7.0.5",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
# Kumo SDK is installed separately (private package)
# See kumo/GUIDE.md for installation instructions

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["etl"]

[tool.mypy]
python_version = "3.11"
strict = true
